syntax = "proto3";

import "proto/enums.proto";

package internal.protocol;


message ServerInfo
{
  bytes identityBytes = 1;
  int64 remote_id = 2;
  EServerType type = 3;
  string address = 4;
  int32 port = 5;
  string name = 6;
  string SubApiName = 7;
  SubApiStickyType StickyType = 8;
  map<string, string> metadata = 9;
}

message NodeHandShakeReq
{
  ServerInfo Info = 1;
}

message NodeHandShakeRes
{
}

message DefaultCreatePacketReq
{
  
}

message DefaultCreatePacketRes
{
  int64 actor_id = 1;
}